# AcousticLearning

./: README.txt  readme.txt
CUDA_learning/: CMakeLists.txt  README.md
CUDA_learning/0_hello_world/: hello_world.cu
CUDA_learning/10_reduceInteger/: reduceInteger.cu
CUDA_learning/12_reduce_unrolling/: CMakeLists.txt  reduceUnrolling.cu  reduce_base.cu
CUDA_learning/13_nested_hello_world/: nested_Hello_World.cu
CUDA_learning/14_global_variable/: global_variable.cu
CUDA_learning/15_pine_memory/: pine_memory.cu
CUDA_learning/16_zero_copy_memory/: zero_copy_memory.cu
CUDA_learning/19_AoS/: AoS.cu
CUDA_learning/1_check_dimension/: check_dimension.cu
CUDA_learning/22_transform_matrix2D/: transform_matrix2D.cu
CUDA_learning/23_sum_array_uniform_memory/: sum_arrays_uniform_memory.cu
CUDA_learning/24_shared_memory_read_data/: shared_memory_read_data.cu
CUDA_learning/25_reduce_integer_shared_memory/: reduce_integer_shared_memory.cu
CUDA_learning/26_transform_shared_memory/: transform_shared_memory.cu
CUDA_learning/27_stencil_1d_constant_read_only/: stencil_1d_constant_read_only.cu
CUDA_learning/28_shfl_test/: shfl_test.cu
CUDA_learning/29_reduce_shfl/: reduce_shfl.cu
Fortran-Tutorial-CN-main/: .gitignore
Fortran-Tutorial-CN-main/bellhopfund/: CMakeLists.txt
Fortran-Tutorial-CN-main/bellhopfund/src/: ArrMod.f90  RWSHDFile.f90  ReadEnvironmentBell.f90  ReflectMod.f90  SourceReceiverPositions.f90  Step.f90  WriteRay.f90  angleMod.f90  bdryMod.f90  bellhop.f90  bellhopMod.f90  influence.f90  sspMod.f90  subtabulate.f90
(+23 files in other folders)
